kustomize/base/deployment.yaml
# kustomize/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openhab
  labels:
    app.kubernetes.io/name: openhab
spec:
  progressDeadlineSeconds: 300
  replicas: 1
  serviceName: openhab-app
  revisionHistoryLimit: 0
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: openhab
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openhab
    spec:
      containers:
        - name: openhab-ssh
          image: openssh-server
          ports:
            - containerPort: 2222
          volumeMounts:
            - name: openhab-data
              mountPath: /openhab/userdata
              subPath: userdata
            - name: openhab-data
              mountPath: /openhab/conf
              subPath: conf
            - name: openhab-data
              mountPath: /openhab/addons
              subPath: addons
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          resources:
            limits:
              memory: "256Mi"
              cpu: 300m
            requests:
              memory: "128Mi"
              cpu: 100m
        - name: config-reloader
          image: configmap-reload
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /etc/alloy
            name: config
          - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
            name: kube-api-access-fkctk
            readOnly: true
          args:
            - --volume-dir=/etc/alloy
            - --webhook-url=http://localhost:12345/-/reload
          resources:
            requests:
              cpu: 1m
              memory: 5Mi
            limits:
              cpu: 100m
              memory: 32Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - name: openhab
          image: openhab
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "4096Mi"
              cpu: 1500m
            requests:
              memory: "512Mi"
              cpu: 400m
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
          securityContext:
            privileged: true
          ports:
            - containerPort: 8080
            - containerPort: 8101
            - containerPort: 5007
          volumeMounts:
            - name: openhab-data
              mountPath: /openhab/addons
              subPath: addons
            - name: openhab-data
              mountPath: /openhab/conf
              subPath: conf
            - name: openhab-data
              mountPath: /openhab/userdata
              subPath: userdata
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: openhab-data
          persistentVolumeClaim:
            claimName: openhab-data
        - name: localtime
          hostPath:
            path: /etc/localtime
        - configMap:
            defaultMode: 420
            name: openhab-alloy
          name: config
        - name: kube-api-access-fkctk
          projected:
            defaultMode: 420
            sources:
            - serviceAccountToken:
                expirationSeconds: 3607
                path: token
            - configMap:
                items:
                - key: ca.crt
                  path: ca.crt
                name: kube-root-ca.crt
            - downwardAPI:
                items:
                - fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
                  path: namespace
