kustomize/base/ingressroute.yaml
# openhab.git: kustomize/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openhab
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`openhab.example.com`)"
      kind: Rule
      services:
        - name: openhab
          port: 80
  tls: {}
